2007-01-17  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap.MassStorage/MassStorageDap.cs: Instead of copying
	instantly when adding a file to a DAP, wait until the Synchronize button
	is pressed like how other DAPs operate.  Fixes BGO #370229.  Doing so
	gives us transcoding nearly for free, fixing BGO #354727.  Based on patch
	by Juri Pakaste.

	* src/Core/Banshee.Base/Dap/DapMisc.cs: Add GetCodec method.

	* src/Core/Banshee.Base/Dap/Dap.cs: Allow subclasses to set the
	SupportedExtensions and SupportedPlaybackMimeTypes properties.

2007-01-16  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Base/Gui/SourceView.cs: Let tracks from smart playlists
	be dragged around.  Patch by Chris Turchin, fixes BGO #377885.

	* src/Core/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs: Set
	IsDragSource for future DAP playlist use.

2007-01-16  James Willcox  <snorp@snorp.net>

	* src/Core/Banshee.Base/Banshee.Metadata.Rhapsody/RhapsodyQueryJob.cs:
	Move the HTTP stuff up to the parent class

	* src/Core/Banshee.Base/Banshee.Metadata.MusicBrainz/*.cs: new metadata
	provider which uses MusicBrainz to find cover art.  It is the default
	provider now, since it gets much higher quality images compared to the
	Rhapsody backend.  If it fails, the Rhapsody backend is used as a
	fallback.

2007-01-15  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Banshee.Configuration/GConfConfigurationClient.cs:
	Support disabling actual GConf support via BANSHEE_DISABLE_GCONF

	* build/gconf-schema-rules: Set BANSHEE_DISABLE_GCONF so a GConf client
	is not actually created during the schema generation; necessary for 
	building in build services, etc.

2007-01-15  Alp Toker  <alp@atoker.com>

	* ext/hal-sharp/Device.cs: Add internal DType enum copied from
	dbus-sharp since it will no longer be available in future versions.

2007-01-15  Aaron Bockover  <abock@gnome.org>
	
	0.11.4 Released

	* NEWS: Updated with 0.11.4 release notes
